--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Form Page</title>
 </head>
 <body background="assets/images/form.jpg" style="background-repeate:no-repeate;background-size:100%">
 <a href="home.html">Home</a>
