--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>Login Page</title>
 <link rel="stylesheet" href="css.css">
 </head>
 <body background="assets/images/login.jpg" style="background-repeate:no-repeate;background-size:100%">
