--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 			<html>
 			<head><title>About Page</title></head>
 			<body background="assets/images/aboutresume.jpg" style="background-repeat:no-repeat;background-size:100%" text="blue">
-			<a href="home.html">Home</a>
+			<a href="index.html">Home</a>
 			
 			
 			<h1 align="center">This is a About Us Page</h1>
