--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 	<title>Form Page</title>
 </head>
 <body background="assets/images/form.jpg" style="background-repeate:no-repeate;background-size:100%">
-<a href="home.html">Home</a>
+<a href="index.html">Home</a>
 	<h1>You have login successfully.</h1>
 	<p align="center">
 	<img src="assets/images/Access.jpg">
