--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="css.css">
 </head>
 <body background="assets/images/login.jpg" style="background-repeate:no-repeate;background-size:100%">
-<a href="home.html">Home</a>
+<a href="index.html">Home</a>
 <center>
 <div style="border:5px solid #28c9ac; text-align:center; width:30%">
 <h1>Login Page</h1>
